--- a/books.html
+++ b/books.html
@@ -106,9 +106,9 @@
   <img  id="coo" src="download.png" alt="lol" width="20px" > <br>
 </div>
 <div class="text">
-  <a id="mew" class="vo" href="https://1lib.in/s/HACKER?">BOOK FOR HACKER </a>
-  <a id="vo1" href="https://1lib.in/s/HACKER?">BOOK FOR HACKER</a>
-  <a id="vo2" href="https://1lib.in/s/HACKER?">BOOK FOR HACKER</a>
+  <a id="mew" class="vo" href="https://www.amazon.in/Hacking-Dummies-Computer-tech/dp/1119154685">BOOK FOR HACKER </a>
+  <a id="vo1" href="https://www.amazon.in/Black-Hat-Python-Justin-Seitz/dp/1593275900">BOOK FOR HACKER</a>
+  <a id="vo2" href="https://www.goodreads.com/book/show/33596532-web-hacking-101">BOOK FOR HACKER</a>
 </div>
 <div id="ansh" class="text1">
   <p>𝖆𝖓𝖘𝖍 𝖘𝖔𝖒𝖗𝖆</p>
