--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ position: absolute;
   <body>
     <div id="noob" class="navbar">
       <a id="lol" class="active" target="_blank" href="index.html">HOME</a>
-      <a id="lol" target="_blank" href="books.html">FREE BOOKS</a>
+      <a id="lol" target="_blank" href="books.html">BOOKS</a>
       <a id="lol" target="_blank" href="blog.html">BLOG</a>
     </div>
     <div class="video-container">
